# frog-counting

./: .gitignore  Cargo.toml  README.md  _testCargo.toml  compile-circuit.sh  jbelscratch.txt  oldCargo.toml  package.json  vite.config.js
.parcel-cache/: 24b89b768c4998af-AssetGraph-0  data.mdb  lock.mdb  requestGraph-4d1942271dfa75db-0  requestGraph-nodes-0-4d1942271dfa75db-0  snapshot-4d1942271dfa75db.txt
circuit-scripts/: build-frog.sh  build-frogIVC.sh  build-is-zero-IVC-full.sh  build-is-zero.sh  build-multiplier.sh  build-multiplier2.sh  build-with-external-inputs.sh
circuits/: basic-circuit.circom  dummy.circom  frog.circom  frogCounterIVC.circom  frogIVC.circom  frogIVC_split.circom  input_frog.json  input_frogIVC.json  input_isZero.json  isZero.circom  isZeroIVC.circom  isZeroIVC.r1cs  isZeroIVC.sym  keccak-chain.circom  multiplier.circom  one-frog.circom
circuits/isZeroIVC_js/: isZeroIVC.wasm
circuits/scratch/: input_frogIVC_split.json  input_isZeroIVC.json  multiplier.circom  one-frog.circom
circuits/with_external_inputs_js/: with_external_inputs.wasm
frog/: get_frog_circuit_inputs.cjs  get_frog_circuit_inputs.js  jbel_frog.txt  parse-frogs.cjs  test-import.js  unpack-sig.js
frog formatting/: deserialize.js  frogs-dump.txt  unpack-sig.js
hello-wasm/: Cargo.toml  index.html
hello-wasm/src/: file_io.js  keccak_chain.rs  lib.rs  prove_verify.js  sha_chain.rs  utils.rs
hello-wasm/static/keccak-circuit/: keccak-chain.circom
hello-wasm/static/keccak-circuit/keccak-chain_js/: keccak-chain.wasm
keccak-circuit/: package.json
prover-site/: .gitignore  README.md  esbuild.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
prover-site/circuit-scripts/: build-frog.sh  build-frogIVC_split.sh  build-multiplier.sh
prover-site/circuits/: input_frogIVC.json
prover-site/circuits/scratch/: isZeroIVC.circom  with_external_inputs.sym
prover-site/frog/: frog-dump.txt  frogcrypto-pcds-2024-08-19T22_42_22.008Z.txt  my_frog.json  parse-frogs.js
prover-site/greet-rust-wasm/: Cargo.toml
prover-site/greet-rust-wasm/src/: lib.rs
prover-site/old/: lib_copy.rs
prover-site/prover-files/: vite.config.js
prover-site/prover-files/circuit-scripts/: build-frog.sh
prover-site/prover-files/circuits/: frog.circom  frogIVC.circom  input_frog.json
prover-site/prover-files/circuits/scratch/: multimult.circom  with_external_inputs.circom  with_external_inputs.r1cs
prover-site/prover-files/frog/: deserialize.js  test.json  unpack-sig.cjs
prover-site/prover-files/nova_solidity_outputs/: frogIVC_split-nova-verifier.sol
prover-site/prover-files/public/: frog_final.zkey
prover-site/prover-files/src/: main.rs  prove_verify.js
prover-site/prover-files/src/scratch/: hash_script.js  parsedfrog_claire.json
prover-site/public/: frogIVC.r1cs  frog_vkey.json  multiplier_final.zkey  multiplier_vkey.json  public_frog.json
prover-site/public/serialized_outputs/: example_serialized_proof_output.txt
prover-site/sonobe-rust/: Cargo.toml
prover-site/sonobe-rust/pkg/: sonobe_rust.d.ts  sonobe_rust.js  sonobe_rust_bg.wasm  sonobe_rust_bg.wasm.d.ts
prover-site/sonobe-rust/src/: lib.rs  serialize_params.rs
prover-site/src/: App.tsx  constants.ts  index.html  lib.rs  main.rs  prove_verify.js  testfrogs.tsx
prover-site/src/apis/: Prover.tsx
prover-site/src/components/: Header.tsx  Navbar.tsx  TryIt.tsx
prover-site/src/hooks/: useEmbeddedZupass.tsx
prover-site/src/nova_solidity_outputs/: frogIVC_split-solidity-calldata.calldata  frogIVC_split-solidity-calldata.inputs
prover-site/src/scratch/: test_fr.rs
prover-site/src/utils/: parseData.tsx  runSonobe.tsx
prover-site/temp-rust/: Cargo.toml
prover-site/temp-zupass/: index.html  package copy.json  pnpm-lock.yaml
prover-site/temp-zupass/public/: index.html
prover-site/temp-zupass/src/: main.tsx
public/: frog_final.zkey  frog_vkey.json  index.html  prover.js  script.js  style.css  test.js  verify.js
scripts/: script.js
serialized_outputs/: g16_pk_output.json  nova_pp_output.json
src/: circom_full_flow.rs  frogIVC_split-nova-verifier.sol  frogIVC_split-solidity-calldata.calldata  frogIVC_split-solidity-calldata.inputs  frog_inputs (3).json  frog_inputs (4).json  frog_inputs.json  frog_inputs_v4.json  index.html  is-zero-nova-verifier.sol  is-zero-solidity-calldata.calldata  is-zero-solidity-calldata.inputs  is_zero.rs  lib.rs  main copy.rs  main.rs  main2.rs  main_IVC_deser_verify.rs  main_IVC_ser.rs  main_IVC_ser_pedersen.rs  main_copy.rs  main_params_ser.rs  main_params_ser_pedersen.rs  main_printing.rs  main_split.rs  nova-verifier.sol  parsedfrog.json  parsedfrog_jbel.json  prove_verify.js  solidity-calldata.calldata  solidity-calldata.inputs  sorting_external_inputs.js
src/KZG/: main_IVC_deser_verify.rs  main_IVC_ser.rs  main_params_ser.rs  mod.rs
src/nova_solidity_outputs/: frogIVC_split-nova-verifier.sol  frogIVC_split-solidity-calldata.calldata  frogIVC_split-solidity-calldata.inputs
src/pedersen/: main_IVC_deser_verify_pedersen.rs  main_IVC_ser_pedersen.rs  main_params_ser_pedersen.rs  mod.rs
src/scratch/: test_json_parse.rs
verifier-site/: .gitignore  index.html  package.json  pnpm-lock.yaml  scratch.txt
verifier-site/public/: frogIVC.r1cs
verifier-site/rust/: Cargo.toml
verifier-site/sonobe-rust/: Cargo.toml  OLDCargo.toml
verifier-site/sonobe-rust/pkg/: package.json  sonobe_rust.d.ts  sonobe_rust.js  sonobe_rust_bg.wasm  sonobe_rust_bg.wasm.d.ts
verifier-site/sonobe-rust/src/: lib.rs  main.rs  utils.rs  verify.rs
verifier-site/src/: App.tsx  example_serialized_proof_data.txt  parseRustProof.ts  parseStringtoBytes.ts
verifier-site/src/apis/: FileSystem.tsx  VerifyRust.tsx
verifier-site/src/components/: AddToZupass.tsx  Header.tsx  IssuePOD.tsx  Navbar.tsx  UserInput.tsx  Verify.tsx  VerifyRust.tsx
verifier-site/src/hooks/: useEmbeddedZupass.tsx
verifier-site/src/outdated/: parseBigInts.js  parseBinStringtoBytes.js  parseBinStringtoBytes.ts  parseRustProof.js  parseRustVkey.js
website/: generateWitness.js  index.html  prover.js  script.js
