[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Claire Zhang <czhang2718@gmail.com>"]
description = "A sample project with wasm-pack for frog-counting"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"